# django_basic_condition_tracker_with_cody_copilot

./: .gitignore  .vercelignore  pyproject.toml  readme.md  requirements.txt  vercel.json
config/: settings.py  urls.py  wsgi.py
tracker/: forms.py  models.py  tests.py  views.py
tracker/migrations/: 0001_initial.py  0002_supplementrecord_local_id_supplementrecord_user.py
tracker/templates/tracker/: choose_mode.html  edit_record.html  login.html  register.html  supplement_record.html
tracker/templatetags/: form_filters.py
