[project]
name = "condition-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "webiroha",email = "24987971+webiroha@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-permissions-policy (>=4.25.0,<5.0.0)",
    "django-ratelimit (>=4.1.0,<5.0.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-redis (>=5.4.0,<6.0.0)",
    "django-csp (>=3.8,<4.0)",
    "django-secure (>=1.0.2,<2.0.0)",
    "django-password-validators (>=1.7.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
