[tool.poetry]
name = "condition-tracker"
version = "0.1.0"
description = "A supplement tracking application"
authors = ["webiroha"]
packages = [{include = "tracker"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=4.2.0,<5.0"
django-permissions-policy = "^4.25.0"
django-ratelimit = "^4.1.0"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
whitenoise = "^6.6.0"
pymemcache = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
